fix: fix shadow of sticky when width is narrow and text wraps

--- a/webui/src/Sticky.css
+++ b/webui/src/Sticky.css
@@ -24,8 +24,14 @@
    * shift it to the left so both left and right sides of the shadow can be covered. */
   left: 10px;
   /* height of the sticky blurred div - overriden via JS now */
-  /* top: 40px; */
+  top: 40px;
   box-shadow:
     0 4px 6px 1px rgb(0 0 0 / 0.1),
     0 2px 4px 2px rgb(0 0 0 / 0.1);
+}
+
+@media (width <= 776px) {
+  .shadow-under-blur {
+    top: 65px;
+  }
 }
